# zfspace

./: .bumpversion.cfg  .flake8  .gitignore  .travis.yml  README.md  main.py  pyproject.toml
.github/workflows/: lint.yaml  publish_to_pypi.yaml  tests.yaml
src/zfspace/: __init__.py  zfspace.py
tests/: test_zfspace.py  zfs_test_cleanup.sh  zfs_test_init.sh
