[project]
name = "zfspace"
description = "zfspace tool helps to analyze how zfs disk space is used"
readme = "README.md"
version = "0.1.3"
authors = [
    { name = "Sergey Zapunidi", email = "zapunidy@gmail.com" }
]
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: CC0 License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
zfspace = "zfspace:main"

[project.urls]
"Homepage" = "https://github.com/Zapunidi/zfspace"
"Bug Tracker" = "https://github.com/Zapunidi/zfspace/issues"