[project]
name = "zfspace"
description = "zfspace tool helps to analyze how zfs disk space is used"
readme = "README.md"
version = "0.7.5"
authors = [
    { name = "Sergey Zapunidi", email = "zapunidy@gmail.com" }
]
requires-python = ">=3.6"
classifiers = [
    "Topic :: System :: Filesystems",
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
zfspace = "zfspace:main"

[project.urls]
"Homepage" = "https://github.com/Zapunidi/zfspace"
"Bug Tracker" = "https://github.com/Zapunidi/zfspace/issues"